// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Menu should match snapshot with id 1`] = `
<MainMenu
  actions={
    Object {
      "closeRhsMenu": [MockFunction],
      "closeRightHandSide": [MockFunction],
      "getSubscriptionStats": [MockFunction],
      "openModal": [MockFunction],
      "showFlaggedPosts": [MockFunction],
      "showMentions": [MockFunction],
      "unhideNextSteps": [MockFunction],
    }
  }
  appDownloadLink={null}
  canCreateOrDeleteCustomEmoji={false}
  canManageIntegrations={true}
  canManageSystemBots={false}
  currentUser={
    Object {
      "id": "test-user-id",
    }
  }
  enableCommands={false}
  enableCustomEmoji={false}
  enableEmailInvitations={false}
  enableIncomingWebhooks={false}
  enableOAuthServiceProvider={false}
  enableOutgoingWebhooks={false}
  enablePluginMarketplace={false}
  enableUserCreation={false}
  experimentalPrimaryTeam={null}
  helpLink={null}
  id="test-id"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  isCloud={false}
  isMentionSearch={false}
  mobile={false}
  moreTeamsToJoin={false}
  pluginMenuItems={Array []}
  reportAProblemLink={null}
  showGettingStarted={false}
  subscription={Object {}}
  teamId="team-id"
  teamIsGroupConstrained={false}
  teamName="team_name"
  teamType="O"
  userIsAdmin={true}
/>
`;

exports[`components/Menu should match snapshot with most of the thing disabled 1`] = `
<MainMenu
  actions={
    Object {
      "closeRhsMenu": [MockFunction],
      "closeRightHandSide": [MockFunction],
      "getSubscriptionStats": [MockFunction],
      "openModal": [MockFunction],
      "showFlaggedPosts": [MockFunction],
      "showMentions": [MockFunction],
      "unhideNextSteps": [MockFunction],
    }
  }
  appDownloadLink={null}
  canCreateOrDeleteCustomEmoji={false}
  canManageIntegrations={true}
  canManageSystemBots={false}
  currentUser={
    Object {
      "id": "test-user-id",
    }
  }
  enableCommands={false}
  enableCustomEmoji={false}
  enableEmailInvitations={false}
  enableIncomingWebhooks={false}
  enableOAuthServiceProvider={false}
  enableOutgoingWebhooks={false}
  enablePluginMarketplace={false}
  enableUserCreation={false}
  experimentalPrimaryTeam={null}
  helpLink={null}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  isCloud={false}
  isMentionSearch={false}
  mobile={false}
  moreTeamsToJoin={false}
  pluginMenuItems={Array []}
  reportAProblemLink={null}
  showGettingStarted={false}
  subscription={Object {}}
  teamId="team-id"
  teamIsGroupConstrained={false}
  teamName="team_name"
  teamType="O"
  userIsAdmin={true}
/>
`;

exports[`components/Menu should match snapshot with most of the thing disabled in mobile 1`] = `
<MainMenu
  actions={
    Object {
      "closeRhsMenu": [MockFunction],
      "closeRightHandSide": [MockFunction],
      "getSubscriptionStats": [MockFunction],
      "openModal": [MockFunction],
      "showFlaggedPosts": [MockFunction],
      "showMentions": [MockFunction],
      "unhideNextSteps": [MockFunction],
    }
  }
  appDownloadLink={null}
  canCreateOrDeleteCustomEmoji={false}
  canManageIntegrations={true}
  canManageSystemBots={false}
  currentUser={
    Object {
      "id": "test-user-id",
    }
  }
  enableCommands={false}
  enableCustomEmoji={false}
  enableEmailInvitations={false}
  enableIncomingWebhooks={false}
  enableOAuthServiceProvider={false}
  enableOutgoingWebhooks={false}
  enablePluginMarketplace={false}
  enableUserCreation={false}
  experimentalPrimaryTeam={null}
  helpLink={null}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  isCloud={false}
  isMentionSearch={false}
  mobile={true}
  moreTeamsToJoin={false}
  pluginMenuItems={Array []}
  reportAProblemLink={null}
  showGettingStarted={false}
  subscription={Object {}}
  teamId="team-id"
  teamIsGroupConstrained={false}
  teamName="team_name"
  teamType="O"
  userIsAdmin={true}
/>
`;

exports[`components/Menu should match snapshot with most of the thing enabled 1`] = `
<MainMenu
  actions={
    Object {
      "closeRhsMenu": [MockFunction],
      "closeRightHandSide": [MockFunction],
      "getSubscriptionStats": [MockFunction],
      "openModal": [MockFunction],
      "showFlaggedPosts": [MockFunction],
      "showMentions": [MockFunction],
      "unhideNextSteps": [MockFunction],
    }
  }
  appDownloadLink="test"
  canCreateOrDeleteCustomEmoji={true}
  canManageIntegrations={true}
  canManageSystemBots={false}
  currentUser={
    Object {
      "id": "test-user-id",
    }
  }
  enableCommands={true}
  enableCustomEmoji={true}
  enableEmailInvitations={true}
  enableIncomingWebhooks={true}
  enableOAuthServiceProvider={true}
  enableOutgoingWebhooks={true}
  enablePluginMarketplace={true}
  enableUserCreation={true}
  experimentalPrimaryTeam="test"
  helpLink="test-link-help"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  isCloud={false}
  isMentionSearch={false}
  mobile={false}
  moreTeamsToJoin={true}
  pluginMenuItems={Array []}
  reportAProblemLink="test-report-link"
  showGettingStarted={false}
  subscription={Object {}}
  teamId="team-id"
  teamIsGroupConstrained={false}
  teamName="team_name"
  teamType="O"
  userIsAdmin={true}
/>
`;

exports[`components/Menu should match snapshot with most of the thing enabled in mobile 1`] = `
<MainMenu
  actions={
    Object {
      "closeRhsMenu": [MockFunction],
      "closeRightHandSide": [MockFunction],
      "getSubscriptionStats": [MockFunction],
      "openModal": [MockFunction],
      "showFlaggedPosts": [MockFunction],
      "showMentions": [MockFunction],
      "unhideNextSteps": [MockFunction],
    }
  }
  appDownloadLink="test"
  canCreateOrDeleteCustomEmoji={true}
  canManageIntegrations={true}
  canManageSystemBots={false}
  currentUser={
    Object {
      "id": "test-user-id",
    }
  }
  enableCommands={true}
  enableCustomEmoji={true}
  enableEmailInvitations={true}
  enableIncomingWebhooks={true}
  enableOAuthServiceProvider={true}
  enableOutgoingWebhooks={true}
  enablePluginMarketplace={true}
  enableUserCreation={true}
  experimentalPrimaryTeam="test"
  helpLink="test-link-help"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  isCloud={false}
  isMentionSearch={false}
  mobile={true}
  moreTeamsToJoin={true}
  pluginMenuItems={Array []}
  reportAProblemLink="test-report-link"
  showGettingStarted={false}
  subscription={Object {}}
  teamId="team-id"
  teamIsGroupConstrained={false}
  teamName="team_name"
  teamType="O"
  userIsAdmin={true}
/>
`;

exports[`components/Menu should match snapshot with plugins 1`] = `
<MainMenu
  actions={
    Object {
      "closeRhsMenu": [MockFunction],
      "closeRightHandSide": [MockFunction],
      "getSubscriptionStats": [MockFunction],
      "openModal": [MockFunction],
      "showFlaggedPosts": [MockFunction],
      "showMentions": [MockFunction],
      "unhideNextSteps": [MockFunction],
    }
  }
  appDownloadLink={null}
  canCreateOrDeleteCustomEmoji={false}
  canManageIntegrations={true}
  canManageSystemBots={false}
  currentUser={
    Object {
      "id": "test-user-id",
    }
  }
  enableCommands={false}
  enableCustomEmoji={false}
  enableEmailInvitations={false}
  enableIncomingWebhooks={false}
  enableOAuthServiceProvider={false}
  enableOutgoingWebhooks={false}
  enablePluginMarketplace={false}
  enableUserCreation={false}
  experimentalPrimaryTeam={null}
  helpLink={null}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  isCloud={false}
  isMentionSearch={false}
  mobile={false}
  moreTeamsToJoin={false}
  pluginMenuItems={
    Array [
      Object {
        "action": [MockFunction],
        "id": "plugin-1",
        "mobileIcon": "plugin-1-mobile-icon",
        "text": "plugin-1-text",
      },
      Object {
        "action": [MockFunction],
        "id": "plugin-2",
        "mobileIcon": "plugin-2-mobile-icon",
        "text": "plugin-2-text",
      },
    ]
  }
  reportAProblemLink={null}
  showGettingStarted={false}
  subscription={Object {}}
  teamId="team-id"
  teamIsGroupConstrained={false}
  teamName="team_name"
  teamType="O"
  userIsAdmin={true}
/>
`;

exports[`components/Menu should match snapshot with plugins in mobile 1`] = `
<MainMenu
  actions={
    Object {
      "closeRhsMenu": [MockFunction],
      "closeRightHandSide": [MockFunction],
      "getSubscriptionStats": [MockFunction],
      "openModal": [MockFunction],
      "showFlaggedPosts": [MockFunction],
      "showMentions": [MockFunction],
      "unhideNextSteps": [MockFunction],
    }
  }
  appDownloadLink={null}
  canCreateOrDeleteCustomEmoji={false}
  canManageIntegrations={true}
  canManageSystemBots={false}
  currentUser={
    Object {
      "id": "test-user-id",
    }
  }
  enableCommands={false}
  enableCustomEmoji={false}
  enableEmailInvitations={false}
  enableIncomingWebhooks={false}
  enableOAuthServiceProvider={false}
  enableOutgoingWebhooks={false}
  enablePluginMarketplace={false}
  enableUserCreation={false}
  experimentalPrimaryTeam={null}
  helpLink={null}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  isCloud={false}
  isMentionSearch={false}
  mobile={true}
  moreTeamsToJoin={false}
  pluginMenuItems={
    Array [
      Object {
        "action": [MockFunction],
        "id": "plugin-1",
        "mobileIcon": "plugin-1-mobile-icon",
        "text": "plugin-1-text",
      },
      Object {
        "action": [MockFunction],
        "id": "plugin-2",
        "mobileIcon": "plugin-2-mobile-icon",
        "text": "plugin-2-text",
      },
    ]
  }
  reportAProblemLink={null}
  showGettingStarted={false}
  subscription={Object {}}
  teamId="team-id"
  teamIsGroupConstrained={false}
  teamName="team_name"
  teamType="O"
  userIsAdmin={true}
/>
`;
